--- a/app/assets/stylesheets/custom_buttons.css
+++ b/app/assets/stylesheets/custom_buttons.css
@@ -45,3 +45,51 @@
    background-image: -ms-linear-gradient(top, #d40b0b 0%, #c2111a 100%);
    color: #fff;
    }
+
+.button2 {
+   border: 1px solid #0a3c59;
+   background: #3e9c9c;
+   background: -webkit-gradient(linear, left top, left bottom, from(#65a9d7), to(#3e9c9c));
+   background: -webkit-linear-gradient(top, #65a9d7, #3e9c9c);
+   background: -moz-linear-gradient(top, #65a9d7, #3e9c9c);
+   background: -ms-linear-gradient(top, #65a9d7, #3e9c9c);
+   background: -o-linear-gradient(top, #65a9d7, #3e9c9c);
+   background-image: -ms-linear-gradient(top, #65a9d7 0%, #3e9c9c 100%);
+   padding: 10.5px 21px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   text-shadow: #7ea4bd 0 1px 0;
+   color: #060b69;
+   font-size: 24px;
+   font-family: helvetica, serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.button2:hover {
+   border: 1px solid #0a3c59;
+   text-shadow: #1e4158 0 1px 0;
+   background: #3e779d;
+   background: -webkit-gradient(linear, left top, left bottom, from(#65a9d7), to(#3e779d));
+   background: -webkit-linear-gradient(top, #65a9d7, #3e779d);
+   background: -moz-linear-gradient(top, #65a9d7, #3e779d);
+   background: -ms-linear-gradient(top, #65a9d7, #3e779d);
+   background: -o-linear-gradient(top, #65a9d7, #3e779d);
+   background-image: -ms-linear-gradient(top, #65a9d7 0%, #3e779d 100%);
+   color: #fff;
+   }
+.button2:active {
+   text-shadow: #1e4158 0 1px 0;
+   border: 1px solid #0a3c59;
+   background: #1475b5;
+   background: -webkit-gradient(linear, left top, left bottom, from(#094369), to(#3e779d));
+   background: -webkit-linear-gradient(top, #094369, #1475b5);
+   background: -moz-linear-gradient(top, #094369, #1475b5);
+   background: -ms-linear-gradient(top, #094369, #1475b5);
+   background: -o-linear-gradient(top, #094369, #1475b5);
+   background-image: -ms-linear-gradient(top, #094369 0%, #1475b5 100%);
+   color: #fff;
+   }
